kubernetes/prd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kerst-hanne-2020
  labels:
    app: kerst-hanne-2020
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kerst-hanne-2020
  template:
    metadata:
      labels:
        app: kerst-hanne-2020
    spec:
      containers:
      - name: kerst-hanne-2020
        image: "localhost:32000/kerst-hanne-2020:b63e28a8"
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          - mountPath: "/data"
            name: "data"
      volumes:
        - name: data
          hostPath:
            path: "/var/hanne-kerst-2020"
            type: "DirectoryOrCreate"
