kubernetes/prd/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kerst-hanne-2020
spec:
  tls:
  - hosts:
    - daan.se
    secretName: daan-se-tls
  rules:
  - host: daan.se
    http:
      paths:
      - path: /hanne
        backend:
          serviceName: kerst-hanne-2020
          servicePort: http
